--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -113,7 +113,22 @@
     "save": "저장",
     "syncing": "동기화 중...",
     "synced": "동기화 완료!",
-    "syncFailed": "동기화 실패"
+    "syncFailed": "동기화 실패",
+    "today": "오늘로 이동",
+    "months": {
+      "january": "1월",
+      "february": "2월",
+      "march": "3월",
+      "april": "4월",
+      "may": "5월",
+      "june": "6월",
+      "july": "7월",
+      "august": "8월",
+      "september": "9월",
+      "october": "10월",
+      "november": "11월",
+      "december": "12월"
+    }
   },
   "profile": {
     "title": "프로필",
