feat: implement smart roster usage limits, add tax summary, and refine dashboard layout
- Enforce 5-scan monthly limit for non-developer accounts
- Add TAX card to monthly pay summary
- Refactor dashboard header for better desktop layout (cards in a row, toggles in a separate row)
- Remove Korea-specific UI and country selection for AU-exclusive focus
- Improve Visa Hours display with responsive grid

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -55,6 +55,7 @@
     "estPay": "Est. Pay",
     "super": "Super",
     "netPay": "Net Pay",
+    "tax": "Tax",
     "grossIncome": "Gross Income",
     "monthly": "Monthly",
     "details": "Details",
